--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "configstore": "^1.4.0",
     "dateformat": "^1.0.12",
     "lodash": "^4.5.0"
+    "util": "^0.11.1"
   },
   "devDependencies": {
     "ava": "^0.12.0",
